--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "filer": "^1.4.1",
     "path-browserify": "^1.0.1",
     "puppeteer": "^22.15.0",
+    "puppeteer-core": "^22.15.0",
     "request": "^2.79.0",
     "util": "^0.12.5"
   }
